#Commit USER BE

--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,3 @@
 MONGODB_URL = mongodb+srv://mhtranminhhoang:12092002@cluster0.0v2nics.mongodb.net/?retryWrites=true&w=majority
+JWT_ACCESS_KEY = secretkey
+JWT_REFRESH_KEY = refreshsecretkey
