--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,8 @@
-MONGODB_URL = mongodb+srv://mhtranminhhoang:12092002@cluster0.0v2nics.mongodb.net/?retryWrites=true&w=majority
+#DATABASE CONNECTION ENVIROMENT VARIABLES
+DB_HOST = localhost
+DB_USER = root
+DB_NAME = coffee_store_db
+DB_PASSWORD = 123
+
 JWT_ACCESS_KEY = secretkey
 JWT_REFRESH_KEY = refreshsecretkey
