--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "4.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.22"
   }
 }
