--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,11 @@
     "mongodb": "4.0",
     "mongoose": "^7.3.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.22"
+    "mysql2": "^3.4.2",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.1"
   }
 }
