--- a/Client/package.json
+++ b/Client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
     "jwt-decode": "^3.1.2",
     "query-string": "^8.1.0",
@@ -22,7 +23,8 @@
     "remixicon": "^3.3.0",
     "sass": "^1.63.4",
     "swiper": "^6.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
