#Send Email ResetPassword, Bugs Change Password

--- a/Server/.env
+++ b/Server/.env
@@ -9,3 +9,10 @@ JWT_REFRESH_KEY = refreshsecretkey
 
 #LIMIT_PRODUCT
 LIMIT_PRODUCT = 6
+
+#APP PASSWORD 
+EMAIL_APP_PASSWORD = atrqeojjhosldqgy
+EMAIL_NAME = mh.tranminhhoang@gmail.com
+
+#URL_SERVER
+URL_SERVER = http://localhost:5000
