--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -20,6 +21,7 @@
     "mongoose": "^7.3.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.4.2",
+    "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.1"
   },
