--- a/Server/package.json
+++ b/Server/package.json
@@ -23,7 +23,8 @@
     "mysql2": "^3.4.2",
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.1"
