--- a/Server/.env
+++ b/Server/.env
@@ -16,3 +16,9 @@ EMAIL_NAME = mh.tranminhhoang@gmail.com
 
 #URL_SERVER
 URL_SERVER = http://localhost:5000
+
+
+#CLOUDINARY
+CLOUDINARY_NAME=ddyzaaz9k
+CLOUDINARY_KEY=425587266819381
+CLOUDINARY_SECRET=BngjvwgOHlp5lzVDGXawAMEDQHo
