--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -19,6 +20,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "4.0",
     "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.4.2",
     "nodemailer": "^6.9.4",
