#Send Mail Register with Gmail

--- a/Server/.env
+++ b/Server/.env
@@ -11,7 +11,7 @@ JWT_REFRESH_KEY = refreshsecretkey
 LIMIT_PRODUCT = 6
 
 #APP PASSWORD 
-EMAIL_APP_PASSWORD = atrqeojjhosldqgy
+EMAIL_APP_PASSWORD = pancbfihojepdcbm
 EMAIL_NAME = mh.tranminhhoang@gmail.com
 
 #URL_SERVER
