--- a/Server/package.json
+++ b/Server/package.json
@@ -27,7 +27,8 @@
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.1"
