--- a/Server/.env
+++ b/Server/.env
@@ -16,6 +16,7 @@ EMAIL_NAME = mh.tranminhhoang@gmail.com
 
 #URL_SERVER
 URL_SERVER = http://localhost:5000
+URL_CLIENT = http://localhost:3000
 
 
 #CLOUDINARY
