#1 Material UI, LoginPage

--- a/Client/package.json
+++ b/Client/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
+    "@mui/styled-engine-sc": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
     "jwt-decode": "^3.1.2",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.1",
@@ -24,6 +31,7 @@
     "redux-persist": "^6.0.0",
     "remixicon": "^3.3.0",
     "sass": "^1.63.4",
+    "styled-components": "^5.3.11",
     "sweetalert2": "^11.7.22",
     "swiper": "^6.8.4",
     "web-vitals": "^2.1.4",
