--- a/Client/package.json
+++ b/Client/package.json
@@ -36,6 +36,7 @@
     "styled-components": "^5.3.11",
     "sweetalert2": "^11.7.22",
     "swiper": "^6.8.4",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
