--- a/Server/package.json
+++ b/Server/package.json
@@ -2,9 +2,9 @@
   "name": "package.json",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +32,9 @@
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
+    "compression": "^1.7.4",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
     "sequelize-cli": "^6.6.1"
   }
 }
