--- a/Client/package.json
+++ b/Client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@material-ui/core": "^4.11.2",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.10",
